rust/build_output.txt
ðŸ”— Found pyo3 bindings
ðŸ Found CPython 3.10 at /home/dcallan-adm/miniconda3/envs/persiste/bin/python
   Compiling persiste-rust v0.1.0 (/home/dcallan-adm/Documents/veg/persiste/rust)
warning: unused import: `AssemblyStateId`
  --> src/assembly/mod.rs:19:32
   |
19 | pub use state::{AssemblyState, AssemblyStateId};
   |                                ^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `TransitionType`
  --> src/assembly/mod.rs:20:38
   |
20 | pub use baseline::{AssemblyBaseline, TransitionType};
   |                                      ^^^^^^^^^^^^^^

warning: unused import: `GillespieSimulator`
  --> src/assembly/mod.rs:24:5
   |
24 |     GillespieSimulator,
   |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `InvalidationReason`
  --> src/lib.rs:16:166
   |
16 | ...ounderBiasConfig, CacheConfig, CacheManager, CacheStatus, InvalidationReason, TopologyGuard};
   |                                                              ^^^^^^^^^^^^^^^^^^

error[E0063]: missing fields `context_class_config`, `depth_gate_threshold` and `founder_bias_config` in initializer of `AssemblyConstraint`
  --> src/assembly/constraint.rs:61:9
   |
61 |         Self { feature_weights }
   |         ^^^^ missing `context_class_config`, `depth_gate_threshold` and `founder_bias_config`

error[E0308]: mismatched types
   --> src/assembly/constraint.rs:169:66
    |
169 |                     .filter_map(|p| config.primitive_classes.get(p).cloned())
    |                                                              --- ^ expected `&_`, found `(&String, &u32)`
    |                                                              |
    |                                                              arguments to this method are incorrect
    |
    = note: expected reference `&_`
                   found tuple `(&String, &u32)`
note: method defined here
   --> /rustc/ded5c06cf21d2b93bffd5d884aa6e96934ee4234/library/std/src/collections/hash/map.rs:909:12
help: consider borrowing here
    |
169 |                     .filter_map(|p| config.primitive_classes.get(&p).cloned())
    |                                                                  +

error[E0308]: mismatched types
   --> src/assembly/constraint.rs:174:66
    |
174 |                     .filter_map(|p| config.primitive_classes.get(p).cloned())
    |                                                              --- ^ expected `&_`, found `(&String, &u32)`
    |                                                              |
    |                                                              arguments to this method are incorrect
    |
    = note: expected reference `&_`
                   found tuple `(&String, &u32)`
note: method defined here
   --> /rustc/ded5c06cf21d2b93bffd5d884aa6e96934ee4234/library/std/src/collections/hash/map.rs:909:12
help: consider borrowing here
    |
174 |                     .filter_map(|p| config.primitive_classes.get(&p).cloned())
    |                                                                  +

error[E0061]: this method takes 5 arguments but 3 arguments were supplied
   --> src/assembly/gillespie.rs:128:46
    |
128 |             let multiplier = self.constraint.rate_multiplier(state, &target, TransitionType::Join);
    |                                              ^^^^^^^^^^^^^^^-------------------------------------- two arguments of type `Option<u32>` and `Option<u32>` are missing
    |
note: method defined here
   --> src/assembly/constraint.rs:94:12
    |
 94 |     pub fn rate_multiplier(
    |            ^^^^^^^^^^^^^^^
...
 99 |         target_depth: Option<u32>,
    |         -------------------------
100 |         founder_rank: Option<u32>,
    |         -------------------------
help: provide the arguments
    |
128 |             let multiplier = self.constraint.rate_multiplier(state, &target, TransitionType::Join, /* Option<u32> */, /* Option<u32> */);
    |                                                                                                  ++++++++++++++++++++++++++++++++++++++

error[E0061]: this function takes 4 arguments but 3 arguments were supplied
   --> src/assembly/gillespie.rs:171:26
    |
171 |               let target = AssemblyState::from_parts_map(
    |  __________________________^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-
172 | |                 new_parts,
173 | |                 new_depth,
174 | |                 state.motifs().clone(),
175 | |             );
    | |_____________- argument #4 of type `Option<u64>` is missing
    |
note: associated function defined here
   --> src/assembly/state.rs:70:12
    |
 70 |     pub fn from_parts_map(
    |            ^^^^^^^^^^^^^^
...
 74 |         stable_id: Option<AssemblyStateId>,
    |         ----------------------------------
help: provide the argument
    |
171 |             let target = AssemblyState::from_parts_map(
...
174 |                 state.motifs().clone(),
175 ~                 /* Option<u64> */,
176 ~             );
    |

error[E0061]: this method takes 5 arguments but 3 arguments were supplied
   --> src/assembly/gillespie.rs:178:46
    |
178 |             let multiplier = self.constraint.rate_multiplier(state, &target, TransitionType::Split);
    |                                              ^^^^^^^^^^^^^^^--------------------------------------- two arguments of type `Option<u32>` and `Option<u32>` are missing
    |
note: method defined here
   --> src/assembly/constraint.rs:94:12
    |
 94 |     pub fn rate_multiplier(
    |            ^^^^^^^^^^^^^^^
...
 99 |         target_depth: Option<u32>,
    |         -------------------------
100 |         founder_rank: Option<u32>,
    |         -------------------------
help: provide the arguments
    |
178 |             let multiplier = self.constraint.rate_multiplier(state, &target, TransitionType::Split, /* Option<u32> */, /* Option<u32> */);
    |                                                                                                   ++++++++++++++++++++++++++++++++++++++

error[E0061]: this method takes 5 arguments but 3 arguments were supplied
   --> src/assembly/gillespie.rs:197:42
    |
197 |         let multiplier = self.constraint.rate_multiplier(state, &target, TransitionType::Decay);
    |                                          ^^^^^^^^^^^^^^^--------------------------------------- two arguments of type `Option<u32>` and `Option<u32>` are missing
    |
note: method defined here
   --> src/assembly/constraint.rs:94:12
    |
 94 |     pub fn rate_multiplier(
    |            ^^^^^^^^^^^^^^^
...
 99 |         target_depth: Option<u32>,
    |         -------------------------
100 |         founder_rank: Option<u32>,
    |         -------------------------
help: provide the arguments
    |
197 |         let multiplier = self.constraint.rate_multiplier(state, &target, TransitionType::Decay, /* Option<u32> */, /* Option<u32> */);
    |                                                                                               ++++++++++++++++++++++++++++++++++++++

Some errors have detailed explanations: E0061, E0063, E0308.
For more information about an error, try `rustc --explain E0061`.
warning: `persiste-rust` (lib) generated 4 warnings
error: could not compile `persiste-rust` (lib) due to 7 previous errors; 4 warnings emitted
ðŸ’¥ maturin failed
  Caused by: Failed to build a native library through cargo
  Caused by: Cargo build finished with "exit status: 101": `env -u CARGO PYO3_BUILD_EXTENSION_MODULE="1" PYO3_ENVIRONMENT_SIGNATURE="cpython-3.10-64bit" PYO3_PYTHON="/home/dcallan-adm/miniconda3/envs/persiste/bin/python" PYTHON_SYS_EXECUTABLE="/home/dcallan-adm/miniconda3/envs/persiste/bin/python" "cargo" "rustc" "--profile" "release" "--message-format" "json-render-diagnostics" "--manifest-path" "/home/dcallan-adm/Documents/veg/persiste/rust/Cargo.toml" "--lib"`

ERROR conda.cli.main_run:execute(125): `conda run maturin develop --release` failed. (See above for error)
